fixed desktop bug on mobile for css

--- a/src/css/modals/modalContainerComp.css
+++ b/src/css/modals/modalContainerComp.css
@@ -19,7 +19,3 @@
         max-width: 270px !important;
     }
 }
-
-@media(min-width: 768px) and (max-width: 1023px){
-
-}
